--- a/docs/_static/css/main.css
+++ b/docs/_static/css/main.css
@@ -21,3 +21,7 @@ body, h1, h2, h3 {
 .wy-side-nav-search, .wy-nav-top {
     background-color: #94aacc
 }
+
+.edgeLabel {
+  background-color: #fcfcfc;
+}
