--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -5,7 +5,7 @@
   img(src="file:///{{ egf_logo_url }}" style="height:35px; width: auto")
 
 
-h1 Sequence optimization report
+h1(style='margin-top: -0.2cm;') Sequence optimization report
 h2(style="text-align:center") {{ project_name }}
 center
   .ui.statistic.tiny
@@ -24,7 +24,7 @@ center
     .ui.icon.message.teal.block-center
       i.check.circle.icon
       .content
-        .header The optimization was succesfull
+        .header The optimization was successful
         p  Below is an overview of the sequence modifications.
         
   else
@@ -55,126 +55,19 @@ table.ui.compact.table.groups.celled.definition(style="text-align: center;")
     td= objectives_evaluations.scores_sum(as_text=True)
     td= edits
     td !{sequenticons['after']}
-//- 
-//- .ui.statistics.tiny
-//-   .ui.statistic
-//-     .value= entries.index.size
-//-     .label Visits
-//-   .ui.statistic
-//-     .value= entries.IP.unique().size
-//-     .label Unique visitors
-//-   .ui.statistic
-//-     .value= requests.index.size
-//-     .label Requests
 
+if constraints_evaluations.all_evaluations_pass()
+  if diffs_figure_data
+    img#diff-figure(src="{{ diffs_figure_data }}")
+  else
+    p(style='font-size: 8px').
+      Note: install Geneblocks for seing a friendly plot of sequence edits here.
+      (pip install geneblocks)
 
-//- <div class="header">
-//-     <a href='https://github.com/Edinburgh-Genome-Foundry/DnaFeaturesViewer'>
-//-       <img class=header-logo src="logo.png"/></a>
-//-     <p>
-//-       version {{dnachisel_version}} <br />
-//-       Made with &hearts; at the Edinburgh Genome Foundry
-//-     </p>
-//- </div>
-//- 
-//- <h1>
-//- Project {{project_name}}
-//- <br />
-//- Sequence Optimization Report
-//- <br />
-//- <span class='outcome-{{outcome.lower()}}'>({{outcome}})</span>
-//- </h1>
-//- 
-//- <h2>Summary</h2>
-//-   <p>
-//-     to satisfy <b>{{ problem.constraints_before | length }}</b> constraints and
-//-     <b>{{problem.objectives_before | length}}</b> objectives.
-//- 
-//-   </p>
-//- 
-//- <table class='fancy-table summary'>
-//-   <th>
-//-     <td>
-//-       Before
-//-     </td>
-//-     <td>
-//-       After
-//-     </td>
-//-   </th>
-//- 
-//-   <tr>
-//-     <td>
-//-       Failing constraints
-//-     </td>
-//-     <td>
-//-       {{problem.constraints_before.filter('failing') | length }}
-//-     </td>
-//-     <td>
-//-       {{ constraints_after.filter('failing') | length}}
-//-     </td>
-//-   </tr>
-//-   <tr>
-//-     <td>
-//-       Total objectives score
-//-     </td>
-//-     <td>
-//-       {{ problem.objectives_before.scores_sum(as_text=True) }}
-//-     </td>
-//-     <td>
-//-       {{ objectives_after.scores_sum(as_text=True) }}
-//-     </td>
-//-   </tr>
-//- </table>
-//- 
-//- <h2> Constraints </h2>
-//- 
-//-   <table class='fancy-table'>
-//-     <th>
-//-       <td>
-//-         Before
-//-       </td>
-//-       <td>
-//-         After
-//-       </td>
-//-     </th>
-//-     {% for (before, after) in zip(problem.constraints_before, constraints_after) %}
-//-     <tr>
-//-       <td class='first'>
-//-         {{ before.specification }}
-//-       </td>
-//-       {% for eval in [before, after] %}
-//-         {% if eval.passes %}
-//-           <td>PASS</td>
-//-         {% else %}
-//-           <td class='red'> FAIL at {{ len(eval.locations) }} locations</td>
-//-         {% endif %}
-//-       {% endfor %}
-//-     </tr>
-//-     {% endfor %}
-//-   </table>
-//- 
-//-   <h2> Objectives </h2>
-//- 
-//-     <table class='fancy-table'>
-//-       <th>
-//-         <td>
-//-           Before
-//-         </td>
-//-         <td>
-//-           After
-//-         </td>
-//-       </th>
-//-       {% for (before, after) in zip(problem.objectives_before, objectives_after) %}
-//-       <tr>
-//-         <td class='first'>
-//-           {{ before.specification }}
-//-         </td>
-//-         {% for eval in [before, after] %}
-//-           <td class={{'green' if eval.is_optimal else ''}}>
-//-             {{ eval.score_as_text }}
-//-           </td>
-//-         {% endfor %}
-//-       </tr>
-//-       {% endfor %}
-//-     </table>
-    
+style.
+ img#diff-figure {
+   display: block;
+   max-width: 100% !important;
+   max-height: 11.5cm !important;
+   margin: 0 auto;
+ }
