updated geneblocks api 1.0.0, added 'optimization_stagnation_tolerance' (changess previous determinism)

--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -61,7 +61,7 @@ if constraints_evaluations.all_evaluations_pass()
     img#diff-figure(src="{{ diffs_figure_data }}")
   else
     p(style='font-size: 8px').
-      Note: install Geneblocks for seing a friendly plot of sequence edits here.
+      Note: install Geneblocks to see a friendly plot of sequence edits here.
       (pip install geneblocks)
 
 style.
