--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -7,6 +7,8 @@
 
 h1(style='margin-top: -0.2cm;') Optimization Report
 h2.subtitle #[span.grey for] {{ project_name }}
+if file_hash
+  h6(style="text-align: center; margin-top: 0; color: #ccc; font-size: 1.3em") File hash {{ file_hash }}
 
 div(style="margin-top:1cm; margin-bottom:1cm;")
   div(style="width: 20%; display: inline-block")
@@ -53,21 +55,6 @@ h2.section Constraints
 
 h2.section Objectives
 {{ pdf_tools.dataframe_to_html(objectives_before_after, extra_classes=('ui', 'very', 'basic', 'compact', 'table'), use_default_classes=False) }}
-
-//- if len(problem.objectives_before.evaluations)
-//-   h2.section Objectives
-//-   table.ui.very.basic.compact.table(style="text-align:center;")
-//-     thead
-//-       th Objective
-//-       th Location
-//-       th Score before
-//-       th Score after
-//-     for eval_before, eval_after in zip(problem.objectives_before.evaluations, objectives_evaluations)
-//-       tr
-//-         td {{eval_before.specification.short_label()}}
-//-         td {{eval_before.specification.location}}
-//-         td {{ eval_before.score_to_formatted_string }}
-//-         td {{ eval_after.score_to_formatted_string }}
 
 style.
   img#diff-figure {
