--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -28,7 +28,7 @@ div(style="margin-top:1cm; margin-bottom:1cm;")
         th
         th Failing constraints
         th Objectives score
-        th Identicon
+        th Sequenticon
       tr
         td(style='background: none') Before
         td= len( problem.constraints_before.filter('failing') )
