cleaned and fixed examples + reorganized constraints_reports code into several files

--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -47,7 +47,7 @@ if constraints_evaluations.all_evaluations_pass()
     p(style='font-size: 8px').
       Note: install Geneblocks to see a friendly plot of sequence edits here.
       (pip install geneblocks)
-p The optimization created {{edits}} edits. See attached Genbank file for a detail.
+p The optimization created {{edits}} edits. See attached Genbank file for the details.
 
 h2.section Constraints
 {{ pdf_tools.dataframe_to_html(constraints_before_after, extra_classes=('ui', 'very', 'basic', 'compact', 'table'), use_default_classes=False) }}
