--- a/dnachisel/reports/assets/optimization_report.pug
+++ b/dnachisel/reports/assets/optimization_report.pug
@@ -45,8 +45,7 @@ if constraints_evaluations.all_evaluations_pass()
     img#diff-figure(src="{{ diffs_figure_data }}")
   else
     p(style='font-size: 8px').
-      Note: install Geneblocks to see a friendly plot of sequence edits here.
-      (pip install geneblocks)
+      Note: install Geneblocks (https://edinburgh-genome-foundry.github.io/Geneblocks) to see a plot of sequence edits here.
 p The optimization created {{edits}} edits. See attached Genbank file for the details.
 
 h2.section Constraints
